--- a/Project1/style.css
+++ b/Project1/style.css
@@ -1,7 +1,29 @@
-h1 {
-    color: green;
+body {
+    background-color: #2F3035;
 }
 
-h2 {
-    color: blue;
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1024px;
+}
+
+header {
+    background-color: blue;
+    height: 118px;
+}
+
+nav {
+    background-color: red;
+    height: 40px;
+}
+
+main {
+    background-color: orange;
+    height: 400px;
+}
+
+footer {
+    background-color: greenyellow;
+    height: 100px;
 }
