--- a/Project1/style.css
+++ b/Project1/style.css
@@ -22,8 +22,10 @@ header {
 }
 
 nav {
-    background-color: red;
-    height: 40px;
+    background-color: rgba(0, 0, 0, 0.3);
+    text-align: center;
+    padding-top: 14px;
+    padding-bottom: 14px;
 }
 
 main {
@@ -51,7 +53,21 @@ a {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+nav a {
+    text-decoration: none;
+    font-size: 12px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 footer {
-    background-color: greenyellow;
-    height: 100px;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+footer p {
+    font-size: 10px;
+    text-align: center;
+    color: rgb(198, 198, 198);
 }
